[package]
name = "rust-dl-heatmap-processing"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
dicom = "0.8.1"
png = "0.17.7"
image = "0.25.1"
dicom-pixeldata = { version = "0.8.1", features = ["image"] }
clap = { version = "4.5.41", features = ["derive"] }
